# alienbio

./: .dataconfig.yaml  .gitignore  404.html  LICENSE  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
api/bio/: index.html
api/cli/: index.html
api/infra/: index.html
api/protocols/: index.html
api/spec_lang/: index.html
architecture/ABIO Data/: index.html
architecture/ABIO Files/: index.html
architecture/ABIO PRD Docs/: index.html
architecture/ABIO Protocols/: index.html
architecture/ABIO Sys/: index.html
architecture/ABIO Todo/: index.html
architecture/ABIO biology/: index.html
architecture/ABIO execution/: index.html
architecture/ABIO infra/: index.html
architecture/Atom/: index.html
architecture/Bio/: index.html
architecture/Chemistry/: index.html
architecture/Compartment/: index.html
architecture/CompartmentTree/: index.html
architecture/ContainerGenerator/: index.html
architecture/Context/: index.html
architecture/Expr/: index.html
architecture/Flow/: index.html
architecture/IO/: index.html
architecture/Interpreter/: index.html
architecture/Molecule/: index.html
architecture/MoleculeGenerator/: index.html
architecture/Pathway/: index.html
architecture/Reaction/: index.html
architecture/ReactionGenerator/: index.html
architecture/Scope/: index.html
architecture/TestHarness/: index.html
architecture/WorldSimulator/: index.html
architecture/WorldState/: index.html
architecture/_template/: index.html
architecture/action/: index.html
architecture/entity/: index.html
architecture/experiment/: index.html
architecture/generator/: index.html
architecture/measurement/: index.html
architecture/simulator/: index.html
architecture/state/: index.html
architecture/step/: index.html
architecture/task/: index.html
architecture/test/: index.html
architecture/timeline/: index.html
catalog/: __init__.py  _index.yaml
docs/: ABIO docs.md  Documentation Guide.md  index.md
rust/: Cargo.toml
search/: search_index.json
src/: __init__.py
tests/: __init__.py  test_placeholder.py
(+304 files in other folders)
