[project]
name = "alienbio"
version = "0.1.0"
description = "Alien Biology: A framework for testing agentic AI reasoning through procedurally generated biological systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Dan Oblinger"}
]
keywords = ["ai", "testing", "biology", "agents", "reasoning"]

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.1",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
