[project]
name = "alienbio"
version = "0.1.0"
description = "Alien Biology: A framework for testing agentic AI reasoning through procedurally generated biological systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Dan Oblinger"}
]
keywords = ["ai", "testing", "biology", "agents", "reasoning"]

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    # dvc_dat: symlinked from ../dvc-dat during development (see M1.2 in roadmap)
]

[project.scripts]
bio = "alienbio.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.1",
    "pyright>=1.1",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-awesome-pages-plugin>=2.9",
    "mkdocs-roamlinks-plugin>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alienbio"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
extraPaths = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
